--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "n0d3",
   "version": "0.0.4",
-  "description": "A robot library",
+  "description": "An IRC robot library",
   "homepage": "https://github.com/gsf/n0d3",
   "author": "Gabriel Farrell <g@grrawr.com>",
   "repository": {
@@ -10,7 +10,6 @@
   },
   "main": "n0d3.js",
   "dependencies": {
-    "campfire": "0.1.1",
     "irc": "0.3.4"
   }
 }
